controllers to allow for login & reg

--- a/flask_app/templates/login_reg.html
+++ b/flask_app/templates/login_reg.html
@@ -64,6 +64,10 @@
 					<input type="text" name="last_name" class="form-control">
 				</div>
 				<div class="form-group pb-4">
+					<label class="pb-2 text-dark" for="screenname">Screenname</label>
+					<input type="text" name="screenname" class="form-control">
+				</div>
+				<div class="form-group pb-4">
 					<label class="pb-2 text-dark" for="email">Email</label>
 					<input type="text" name="email" class="form-control">
 				</div>
