--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -24,17 +24,10 @@
 	  <div class="collapse navbar-collapse" id="main_nav">
 		<ul class="navbar-nav ms-auto">
 			{% if session['user_id'] %}
-				{% if request.path == '/dashboard' %}
-					<li class="nav-item px-3"><button type="button" class="btn btn-dark">Dashboard</button></li>
-				{% else %}
-				<li class="nav-item px-3"><a class="nav-link text-dark" href="/dashboard"> Dashboard </a></li>
-				{% endif %}
 				{% if request.path == '/profile' %}
-					<li class="nav-item px-3"><button type="button" class="btn btn-dark">{{ user.first_name}}'s Profile</button></li>
-
+					<li class="nav-item px-3"><button type="button" class="btn btn-dark">Profile</button></li>
 				{% else %}
-				<li class="nav-item px-3"><a class="nav-link text-dark" href="/profile"> {{ user.first_name}}'s Profile </a></li>
-
+				<li class="nav-item px-3"><a class="nav-link text-dark" href="/profile">Profile </a></li>
 				{% endif %}
 				<li class="nav-item px-3"><a class="nav-link text-dark" href="/logout"> Logout </a></li>
 			{% else %}
@@ -61,4 +54,3 @@
 	<script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
 </body>
 </html>
-
