quick nav to movie search for testing

--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -7,6 +7,6 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <p>Placeholder Dashboard</p>
+    <p>Placeholder Dashboard Table (Jinja loop table with all movies that have been favorited.</p>
 </body>
 </html>
