--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -31,6 +31,7 @@
 				{% endif %}
 				<li class="nav-item px-3"><a class="nav-link text-dark" href="/logout"> Logout </a></li>
 			{% else %}
+				<li class="nav-item px-3"><a class="nav-link text-dark" href="/movies"> Try It (temp dev shortcut) </a></li> 
 				<li class="nav-item px-3"><a class="nav-link text-dark" href="/about"> About </a></li>
 				<li class="nav-item px-3"><a class="" href="/login"><button type="button" class="btn btn-outline-dark">Login</button></a></li>
 			{% endif %}
