placeholder for form to favorite movie

--- a/flask_app/templates/movie_view.html
+++ b/flask_app/templates/movie_view.html
@@ -32,6 +32,8 @@
 					<h3>{{output.genres}}</h3>
 				</div>
 			  </div>
+			  <form action="" method="POST" class="mx-auto p-4">
+			  <input type="hidden" id="film_id" name="film_id" value="{{output.id}}">
 			  <input type="submit" value="Favorite!" class="btn btn-warning">
 			</div>
 		</div>
