--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -30,6 +30,7 @@
 				<li class="nav-item px-3"><a class="btn btn-outline-dark" href="/movies"> Search </a></li>
 				<li class="nav-item px-3"><a class="btn btn-outline-dark" href="/profile">Profile </a></li>
 				{% endif %}
+				<li class="nav-item px-3"><a class="btn btn-outline-dark" href="/dashboard">Dashboard </a></li> 
 				<li class="nav-item px-3"><a class="btn btn-outline-dark" href="/logout"> Logout </a></li>
 			{% else %}
 				<li class="nav-item px-3"><a class="nav-link text-dark" href="/movies"> Try It (temp dev shortcut) </a></li> 
