--- a/flask_app/templates/movie_view.html
+++ b/flask_app/templates/movie_view.html
@@ -8,33 +8,36 @@
 					<h2 class="text-warning mt-3">{{output.title}}</h2>
 					<h5 class="text-warning">IMDB Rating: <span class="text-dark">{{output.imDbRating}}</span></h5>
 				</div>
-			  <div class="card-body d-flex flex-column">
+			<div class="card-body d-flex flex-column">
 				<img src="{{output.image}}" width="100%">
-			  </div>
+			</div>
 			</div>
 		</div>
 		<div class="col">
 			<div class="jumbotron">
-			  <h5 class="display-5">Movie Profile</h5>
-			  <p class="lead">Confirm that this is the film you're looking for!</p>
-			  <hr class="my-4">
-			  <div class="row mb-3">
-				<div class="col">
-					<h5 class="text-secondary">Release Year</h5>
-					<h3>{{output.year}}</h3>
+				<h5 class="display-5">Movie Profile</h5>
+				<p class="lead">Confirm that this is the film you're looking for!</p>
+				<hr class="my-4">
+				<div class="row mb-3">
+					<div class="col">
+						<h5 class="text-secondary">Release Year</h5>
+						<h3>{{output.year}}</h3>
+					</div>
+					<div class="col">
+						<h5 class="text-secondary">Rating</h5>
+						<h3>{{output.contentRating}}</h3>
+					</div>
+					<div class="col">
+						<h5 class="text-secondary">Genres</h5>
+						<h3>{{output.genres}}</h3>
+					</div>
 				</div>
-				<div class="col">
-					<h5 class="text-secondary">Rating</h5>
-					<h3>{{output.contentRating}}</h3>
-				</div>
-				<div class="col">
-					<h5 class="text-secondary">Genres</h5>
-					<h3>{{output.genres}}</h3>
-				</div>
-			  </div>
-			  <form action="" method="POST" class="mx-auto p-4">
-			  <input type="hidden" id="film_id" name="film_id" value="{{output.id}}">
-			  <input type="submit" value="Favorite!" class="btn btn-warning">
+				<form action="/add_favorite/" method="POST" class="mx-auto p-4">
+				<input type="hidden" id="movie_id" name="movie_id" value="{{output.id}}">
+				<input type="hidden" id="title" name="title" value="{{output.title}}">
+				<input type="hidden" id="genre" name="genre" value="{{output.genres}}">
+				<input type="hidden" id="release_date" name="release_date" value="{{output.year}}">
+				<input type="submit" value="Favorite!" class="btn btn-warning">
 			</div>
 		</div>
 	</div>
