--- a/flask_app/templates/movie_view.html
+++ b/flask_app/templates/movie_view.html
@@ -7,6 +7,7 @@
 				<div class="card-header">
 					<h2 class="text-warning mt-3">{{output.title}}</h2>
 					<h5 class="text-warning">IMDB Rating: <span class="text-dark">{{output.imDbRating}}</span></h5>
+					film id: {{output.id}}
 				</div>
 			<div class="card-body d-flex flex-column">
 				<img src="{{output.image}}" width="100%">
@@ -33,10 +34,10 @@
 					</div>
 				</div>
 				<form action="/add_favorite/" method="POST" class="mx-auto p-4">
-				<input type="hidden" id="movie_id" name="movie_id" value="{{output.id}}">
-				<input type="hidden" id="title" name="title" value="{{output.title}}">
-				<input type="hidden" id="genre" name="genre" value="{{output.genres}}">
-				<input type="hidden" id="release_date" name="release_date" value="{{output.year}}">
+					<input type="hidden" id="movie_id" name="movie_id" value="{{output.id}}">
+					<input type="hidden" id="title" name="title" value="{{output.title}}">
+					<input type="hidden" id="genre" name="genre" value="{{output.genres}}">
+					<input type="hidden" id="release_date" name="release_date" value="{{output.year}}">
 				<input type="submit" value="Favorite!" class="btn btn-warning">
 			</div>
 		</div>
