a lot of commits... small tweak

--- a/flask_app/templates/movie_view.html
+++ b/flask_app/templates/movie_view.html
@@ -37,6 +37,7 @@
 				<input type="hidden" id="title" name="title" value="{{output.title}}">
 				<input type="hidden" id="genre" name="genre" value="{{output.genres}}">
 				<input type="hidden" id="release_date" name="release_date" value="{{output.year}}">
+				<input type="hidden" id="imdb_id" name="imdb_id" value="{{output.id}}">
 				<input type="submit" value="Favorite!" class="btn btn-warning">
 			</div>
 		</div>
