--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -27,13 +27,12 @@
 				{% if request.path == '/profile' %}
 					<li class="nav-item px-3"><button type="button" class="btn btn-dark">Profile</button></li>
 				{% else %}
-				<li class="nav-item px-3"><a class="btn btn-outline-dark" href="/movies"> Search </a></li>
-				<li class="nav-item px-3"><a class="btn btn-outline-dark" href="/profile_view">Profile </a></li>
+				<li class="nav-item px-3"><a class="btn" href="/movies"> Search </a></li>
+				<li class="nav-item px-3"><a class="btn" href="/profile_view">{{member.first_name}}'s Profile </a></li>
 				{% endif %}
-				<li class="nav-item px-3"><a class="btn btn-outline-dark" href="/dashboard">Dashboard </a></li> 
+				<li class="nav-item px-3"><a class="btn" href="/dashboard">Dashboard </a></li> 
 				<li class="nav-item px-3"><a class="btn btn-outline-dark" href="/logout"> Logout </a></li>
 			{% else %}
-				<li class="nav-item px-3"><a class="nav-link text-dark" href="/movies"> Try It (temp dev shortcut) </a></li> 
 				<li class="nav-item px-3"><a class="nav-link text-dark" href="/about"> About </a></li>
 				<li class="nav-item px-3"><a class="" href="/login"><button type="button" class="btn btn-outline-dark">Login</button></a></li>
 			{% endif %}
