fix to navbar link

--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -28,7 +28,7 @@
 					<li class="nav-item px-3"><button type="button" class="btn btn-dark">Profile</button></li>
 				{% else %}
 				<li class="nav-item px-3"><a class="btn" href="/movies"> Search </a></li>
-				<li class="nav-item px-3"><a class="btn" href="/profile_view">{{member.first_name}}'s Profile </a></li>
+				<li class="nav-item px-3"><a class="btn" href="/profile_view">Profile </a></li>
 				{% endif %}
 				<li class="nav-item px-3"><a class="btn" href="/dashboard">Dashboard </a></li> 
 				<li class="nav-item px-3"><a class="btn btn-outline-dark" href="/logout"> Logout </a></li>
