added profile table showing faves... needs format

--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -45,7 +45,7 @@
                 <div class="d-flex w-100 justify-content-between">
                     <h5 class="mb-1">{{ r.title }}</h5>
                     {% if r.id in faves_ids %}
-                    <img class='check'src="/static/img/R.jpg" alt="check">
+                    <img class='check' src="/static/img/R.png" alt="check">
                     {% endif %}
                 </div>
                 </a>
