--- a/flask_app/templates/profile_view.html
+++ b/flask_app/templates/profile_view.html
@@ -5,22 +5,44 @@
 		<div class="col-md-5">
 			<h1 class="display-6 pt-4">Hey, {{ member.first_name }}</h1>
 			<p class="lead">Profile lookin' good? If not you can edit it below.</p>
-	<div class="row">
-		<div class="card border-0 p-4 bg-light">
-			<h5 class="text-secondary">Screen Name</h5>
-			<h3 class="pb-4">{{member.screenname}}</h3>
-			<h5 class="text-secondary">First Name</h5>
-			<h3 class="pb-4">{{member.first_name}}</h3>
-			<h5 class="text-secondary">Last Name</h5>
-			<h3 class="pb-4">{{member.last_name}}</h3>
-			<h5 class="text-secondary">City</h5>
-			<h3 class="pb-4">{{member.city}}</h3>
-			<h5 class="text-secondary">State</h5>
-			<h3 class="pb-4">{{member.state}}</h3>
-			<h5 class="text-secondary">About Me</h5>
-			<h3 class="pb-4">{{member.about_me}}</h3>
-			<a href='/profile_edit'class="btn btn-warning">Edit</a>
+			<div class="row">
+				<div class="card border-0 p-4 bg-light">
+					<h5 class="text-secondary">Screen Name</h5>
+					<h3 class="pb-4">{{member.screenname}}</h3>
+					<h5 class="text-secondary">First Name</h5>
+					<h3 class="pb-4">{{member.first_name}}</h3>
+					<h5 class="text-secondary">Last Name</h5>
+					<h3 class="pb-4">{{member.last_name}}</h3>
+					<h5 class="text-secondary">City</h5>
+					<h3 class="pb-4">{{member.city}}</h3>
+					<h5 class="text-secondary">State</h5>
+					<h3 class="pb-4">{{member.state}}</h3>
+					<h5 class="text-secondary">About Me</h5>
+					<h3 class="pb-4">{{member.about_me}}</h3>
+					<a href='/profile_edit'class="btn btn-warning">Edit</a>
+				</div>
 			</div>
+		</div>
+		<div class="col-md-6">
+			<h3 class="pb-4">Favorite Movies</h3>
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Title</th>
+						<th>Genres</th>
+						<th>Year</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for favorite in favorites %}
+					<tr>
+						<td>{{ favorite.title }}</td>
+						<td>{{ favorite.genres }}</td>
+						<td>{{ favorite.release_date }}</td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 		</div>
 	</div>
 </div>
