--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -38,33 +38,32 @@
             </button>
             </div>
         </div>
+        <div class="col-1"></div>
         <div class="col">
-            <h3 class="display-6 py-4">Your favorites:</h3>
+            <h3 class="display-5 py-4">User favorites:</h3>
             <div class="list-group">
-                    {% for r in output %}
-                        <a href="/movies/search/results/{{ r.id }}" class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">{{ r.title }}</h5>
-                            {% if r.id in faves_ids %}
-                            <small><img class='check'src='/static/img/R.png' alt='check'></small>
-                            {% endif %}
-                        </div>
-                        </a>
-                    {% endfor %}
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Year</th>
+                            <th class='text-center'>Personal Favorite</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for movie in movies %}
+                        <tr>
+                            <td>{{ movie.title }}</td>
+                            <td>{{ movie.release_date }}</td>
+                            <td class='text-center'>
+                                {% if movie.imdb_id in faves_ids %}
+                                <small><img class='check'src='/static/img/R.png' alt='check'></small>
+                                {% endif %}
+                        </tr>
+                        {% endfor %}
+                </table>
                 </div>
             </div>
-            <div class="col">
-                <h8 class="display-6 py-4">Popular among friends:</h8>
-                <div class="list-group">
-                        {% for movie in movies %}
-                            <a href="/movies/search/results/{{ movie.imdb_id }}" class="list-group-item list-group-item-action">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">{{ movie.title }}</h5>
-                            </div>
-                            </a>
-                        {% endfor %}
-                    </div>
-                </div>
         </div>
     </div>
 </div>
