--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -5,66 +5,55 @@
     <p class="lead">Here is what you and your friends like on IMDB!</p>
     <div class="row mt-5">
         <div class="col-md-4">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="{{output[0].image}}" class="d-block w-100" alt="...">
                 </div>
-            </div>
-            <div class="carousel-inner">
                 {% for r in output %}
-                {% if r.id in faves_ids %}
-            <div class="carousel-item {% if loop.index == 1 %} active{% endif %}"  data-bs-interval="10000">
-                <img class="d-block w-100 rounded rounded-5" src="{{ r.image}}" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                <h5 class='fw-bold'>{{ r.title }}</h5>
-                <p class='fw-bold'></p>
+                    {% if r.id in faves_ids %}
+                <div class="carousel-item">
+                  <img src="{{r.image}}" class="d-block w-100" alt="...">
                 </div>
-            </div>
-            {% endif %}
-            {% endfor %}
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    {% endif %}
+                {% endfor %}
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
-            </button>
+              </button>
             </div>
         </div>
+        <div class="col-1"></div>
         <div class="col">
-            <h3 class="display-6 py-4">Your favorites:</h3>
+            <h3 class="display-5 py-4">User favorites:</h3>
             <div class="list-group">
-                    {% for r in output %}
-                        <a href="/movies/search/results/{{ r.id }}" class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">{{ r.title }}</h5>
-                            {% if r.id in faves_ids %}
-                            <small><img class='check'src='/static/img/R.png' alt='check'></small>
-                            {% endif %}
-                        </div>
-                        </a>
-                    {% endfor %}
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Year</th>
+                            <th class='text-center'>Personal Favorite</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for movie in movies %}
+                        <tr>
+                            <td>{{ movie.title }}</td>
+                            <td>{{ movie.release_date }}</td>
+                            <td class='text-center'>
+                                {% if movie.imdb_id in faves_ids %}
+                                <small><img class='check'src='/static/img/R.png' alt='check'></small>
+                                {% endif %}
+                        </tr>
+                        {% endfor %}
+                </table>
                 </div>
             </div>
-            <div class="col">
-                <h8 class="display-6 py-4">Popular among friends:</h8>
-                <div class="list-group">
-                        {% for movie in movies %}
-                            <a href="/movies/search/results/{{ movie.imdb_id }}" class="list-group-item list-group-item-action">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">{{ movie.title }}</h5>
-                            </div>
-                            </a>
-                        {% endfor %}
-                    </div>
-                </div>
         </div>
     </div>
 </div>
